# feedsearch-crawler

./: .gitignore  BUILD_SIZE_COMPARISON.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  Readme.md  app.py  main.py  pyproject.toml  setup.py  test_changes.py  testgen.py
.github/workflows/: codeql-analysis.yml
crawler/: __init__.py  crawler.py  duplicatefilter.py  item.py  item_parser.py  lib.py  request.py  response.py
docs/: API_DESIGN_OPTIONS.md  BUILD_SIZE_COMPARISON.md  DATETIME_PARSING_ANALYSIS.md  DATETIME_TEST_DATA_GUIDE.md  DATETIME_TEST_DATA_QUICKSTART.md  DATETIME_TEST_DATA_SUMMARY.md  DATETIME_TEST_RESULTS.md  FEED_SPEC_DATE_HANDLING.md  HTML_XML_PARSING_ANALYSIS.md  OPTION3_IMPLEMENTATION_SUMMARY.md  ROBOTS_SITEMAP_IMPLEMENTATION_PLAN.md  ROBOTS_SITEMAP_IMPLEMENTATION_SUMMARY.md
feedsearch/: __init__.py  crawler.py  dupefilter.py  feed.py  feed_info.py  feed_info_parser.py  feedsearch.py  feedsearch_crawler.py  item.py  lib.py  request.py  response.py  site_meta.py  site_meta_parser.py  site_meta_processor.py
feedsearch/crawler/: __init__.py  crawler.py  duplicatefilter.py  item_parser.py  lib.py  request.py  response.py  trace.py
feedsearch/feedsearch_spider/: __init__.py  dupefilter.py  feed_info.py  feed_info_parser.py  lib.py  site_meta.py  site_meta_parser.py  spider.py
feedsearch_crawler/: __init__.py
feedsearch_crawler/crawler/: __init__.py  crawler.py  downloader.py  duplicatefilter.py  item.py  item_parser.py  lib.py  queueable.py  refactored_request.py  request.py  response.py  trace.py
feedsearch_crawler/feed_spider/: __init__.py  dupefilter.py  favicon.py  feed_info.py  feed_info_parser.py  lib.py  link_filter.py  regexes.py  site_meta.py  site_meta_parser.py  spider.py
src/feedsearch_crawler/: __init__.py  exceptions.py  result.py  schemas.py
src/feedsearch_crawler/crawler/: __init__.py  crawler.py  downloader.py  duplicatefilter.py  exceptions.py  item.py  item_parser.py  lib.py  old_request.py  queueable.py  request.py  response.py  statistics.py  trace.py
src/feedsearch_crawler/crawler/middleware/: __init__.py  base.py  content_type.py  cookie.py  monitoring.py  retry.py  robots.py  throttle.py
src/feedsearch_crawler/feed_spider/: __init__.py  dupefilter.py  favicon.py  feed_info.py  feed_info_parser.py  lib.py  link_filter.py  regexes.py  site_meta.py  site_meta_parser.py  spider.py
tests/: conftest.py  feed_info_parser_test.py  test_api_contract.py  test_error_handling.py  test_public_api.py  test_readme_examples.py  test_serialization.py
tests/crawler/: lib_test.py  queueable_test.py  test_crawler.py  test_downloader.py  test_performance_optimizations.py  test_refactored_request.py  test_request.py  test_response.py  test_statistics.py
tests/crawler/middleware/: test_retry.py  test_robots.py  test_robots_sitemaps.py  test_throttle.py
tests/feed_spider/: datetime_test_data.py  example_add_language.py  favicon_test.py  feed_info_parser_test.py  link_filter_test.py  spider_test.py  test_date_comparison.py  test_datetime_parsing.py  test_datetime_with_fixtures.py  test_feed_info_parser.py  test_feed_info_validation.py  test_link_filter_comprehensive.py  test_site_meta_parser.py  test_spider_fast.py  test_spider_integration.py  test_spider_integration.py.disabled
tests/fixtures/: sample_robots.txt
tests/fixtures/sample_feeds/: atom.xml  feed.json  rss2.xml
tests/fixtures/sample_html/: blog_with_feeds.html  no_feeds.html
