[project]
name = "feedsearch-crawler"
version = "1.0.3"
description = "Search sites for RSS, Atom, and JSON feeds"
authors = [
    {name = "David Beath", email = "davidgbeath@gmail.com"}
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DBeath/feedsearch-crawler"
requires-python = ">=3.12"
keywords = [
    "RSS",
    "Search",
    "Crawler",
    "Feeds",
    "Atom"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
packages = [
    { include = "feedsearch_crawler" },
]
dependencies = [
    "aiohttp>3.12.0",
    "beautifulsoup4>=4.14.2",
    "aiodns>=3.2.0",
    "uvloop>=0.19.0",
    "w3lib>=2.1.2",
    "feedparser>=6.0.12",
    "brotlipy>=0.7.0",
    "python-dateutil>=2.9.0.post0",
    "yarl>=1.22.0",
    "asyncio>=3.4.3",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
feedsearch-crawler = "feedsearch_crawler:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.9",
]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Note: -n auto enables parallel test execution but may cause pytest to hang on exit
# This is a known pytest-xdist issue. Use 'timeout <seconds> uv run pytest' as workaround
# addopts = "-n auto"
filterwarnings = [
    # Ignore AsyncMock warnings from unittest.mock (Python 3.12 known issue)
    "ignore::RuntimeWarning:unittest.mock",
    "ignore::RuntimeWarning:_pytest.stash",
    # Ignore feedparser deprecation warnings (external library)
    "ignore::DeprecationWarning:feedparser",
]
